# js-engine-from-scratch

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  index.html  index.js  package.json  webpack.config.js
src/lib/: engine.rs  exec.rs  lib.rs
src/lib/environment/: declerative_environment_record.rs  environment_record_trait.rs  function_environment_record.rs  global_environment_record.rs  lexical_environment.rs  object_environment_record.rs
src/lib/js/: array.rs  boolean.rs  console.rs  error.rs  function.rs  json.rs  math.rs  mod.rs  object.rs  string.rs  value.rs
src/lib/syntax/: lexer.rs  parser.rs
src/lib/syntax/ast/: constant.rs  expr.rs  keyword.rs  mod.rs  op.rs  pos.rs  punc.rs  punctuator.rs  token.rs
tests/: arrow_function_test.rs  const_test.rs  env_test.rs  lexer_test.rs  new_test.rs  obj_test.rs  string_test.rs  value_test.rs
tests/js/: defineVar.js
