[package]
name = "js-engine-from-scratch"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = [".vscode/*", "Dockerfile", "Makefile", ".editorConfig"]

[dependencies]


[lib]
name = "js"
path = "src/lib/lib.rs"
