[package]
name = "js-engine-from-scratch"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = [".vscode/*", "Dockerfile", "Makefile", ".editorConfig"]

[dependencies]
gc = "0.3.2"
gc_derive = "0.3.2"
serde_json = "1.0"
rand = "0.5.5"
time = "0.1"

[lib]
name = "engine"
path = "src/lib/lib.rs"
