[package]
name = "js-engine-from-scratch"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
exclude = [".vscode/*", "Dockerfile", "Makefile", ".editorConfig"]

[dependencies]
gc = "0.3.2"
gc_derive = "0.3.2"
serde_json = "1.0"
rand = "0.5.5"
chrono = "0.4"
wasm-bindgen = "0.2.43"

[lib]
crate-type = ["cdylib", "lib"]
name = "engine"
path = "src/lib/lib.rs"
